// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useSemanticSearch hook > should cancel previous search 1`] = `
{
  "searchError": "",
  "searchResults": [
    {
      "description": "test2",
      "id": "dataset",
      "title": "dataset title",
      "type": "dataset",
      "url": "/modeler/#/test",
    },
    {
      "description": "test2",
      "id": "attribute",
      "title": "attribute title",
      "type": "attribute",
      "url": "/modeler/#/test",
    },
    {
      "description": "test2",
      "id": "label",
      "title": "label title",
      "type": "label",
      "url": "/modeler/#/test",
    },
    {
      "description": "test2",
      "id": "fact",
      "title": "fact title",
      "type": "fact",
      "url": "/modeler/#/test",
    },
    {
      "description": "test2",
      "id": "date",
      "title": "date title",
      "type": "date",
      "url": "/modeler/#/test",
    },
    {
      "description": "test2",
      "id": "metric",
      "title": "metric title",
      "type": "metric",
      "url": "/metrics/#/test/metric/metric",
    },
    {
      "description": "test2",
      "id": "visualization",
      "title": "visualization title",
      "type": "visualization",
      "url": "/analyze/#/test/visualization/edit",
    },
    {
      "description": "test2",
      "id": "dashboard",
      "title": "dashboard title",
      "type": "dashboard",
      "url": "/dashboards/#/workspace/test/dashboard/dashboard",
    },
  ],
  "searchStatus": "success",
}
`;

exports[`useSemanticSearch hook > should return correct results 1`] = `
{
  "searchError": "",
  "searchResults": [
    {
      "description": "test",
      "id": "dataset",
      "title": "dataset title",
      "type": "dataset",
      "url": "/modeler/#/test",
    },
    {
      "description": "test",
      "id": "attribute",
      "title": "attribute title",
      "type": "attribute",
      "url": "/modeler/#/test",
    },
    {
      "description": "test",
      "id": "label",
      "title": "label title",
      "type": "label",
      "url": "/modeler/#/test",
    },
    {
      "description": "test",
      "id": "fact",
      "title": "fact title",
      "type": "fact",
      "url": "/modeler/#/test",
    },
    {
      "description": "test",
      "id": "date",
      "title": "date title",
      "type": "date",
      "url": "/modeler/#/test",
    },
    {
      "description": "test",
      "id": "metric",
      "title": "metric title",
      "type": "metric",
      "url": "/metrics/#/test/metric/metric",
    },
    {
      "description": "test",
      "id": "visualization",
      "title": "visualization title",
      "type": "visualization",
      "url": "/analyze/#/test/visualization/edit",
    },
    {
      "description": "test",
      "id": "dashboard",
      "title": "dashboard title",
      "type": "dashboard",
      "url": "/dashboards/#/workspace/test/dashboard/dashboard",
    },
  ],
  "searchStatus": "success",
}
`;
